# new-python-project-settings

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
